build docker image2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,8 @@ image: docker:stable
 variable:
   IMAGE_NAME: "alpine_python:1.1.0"
 
-services: -docker:19.03.12-dind
+services:
+  - docker:19.03.12-dind
 
 build image:
   script:
