--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,6 @@ services:
 
 build image:
   script:
-    - docker build -t registry.gitlab.com/my_project121/docker_image_build
-    - docker login registry.gitlab.com
-    - docker push registry.gitlab.com/my_project121/docker_image_build
+    - docker build -t maramayari
+    - docker login maramayari -p $DOKEN_HUB_TOKEN
+    - docker push maramayari
